# pydaconf-plugins-vault

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
pydaconf_plugins_vault/: __init__.py  config_model.py  utils.py  vault.py
tests/: test_basics.py
